--- a/src/routes/Home/AboutMe/AboutMe.scss
+++ b/src/routes/Home/AboutMe/AboutMe.scss
@@ -10,6 +10,8 @@
   justify-content: center;
   align-items: center;
   &__img {
+    width: stretch;
+    height: stretch;
     height: 100%;
     border-radius: 50%;
   }
